# dynamic_spanner

./: .gitignore
cpp_version/: CMakeLists.txt  clustered_points  clustered_points_mat  create_distance_matrix.cpp  dist_matrix_5.txt  points_5.txt  random_100_5_dim_3.mat  random_200_5_dim_3.mat  random_50_5_dim_3.mat
cpp_version/include/: dynamic_spanner.h  experiment_helper.h  nearest_neighbor_search.h  quadtree.h
cpp_version/include/cover_tree/: boost_graph_import.h  cover_tree.h  wspd.h  wspd_node.h
cpp_version/include/dnn/local/: kd-tree.hpp
cpp_version/include/wasserstein/: auction_oracle_kdtree_restricted.hpp  auction_runner_gs.h  auction_runner_gs.hpp  basic_defs_ws.h  diagram_reader.h  dist_bounds.h  lower_bound.h  wasserstein.h  wasserstein_space_point.h
cpp_version/src/: cover_tree.cpp  experiment_helper.cpp  main.cpp  wspd.cpp  wspd_node.cpp
data_files/: blind_spanner_mcgill_original_results_450_max.txt  blind_spanner_mcgill_perturbed_results_max_800.txt  dist_matrix_points_2_100_exp.txt  dist_matrix_points_2_100_normal.txt  dist_matrix_points_2_150_exp.txt  dist_matrix_points_2_150_normal.txt  dist_matrix_points_2_150_unif.txt  dist_matrix_points_2_200_exp.txt  dist_matrix_points_2_300_exp.txt  dist_matrix_points_2_300_normal.txt  dist_matrix_points_2_350_clustered.txt  dist_matrix_points_2_350_exp.txt  dist_matrix_points_2_350_normal.txt  dist_matrix_points_2_450_unif.txt  dist_matrix_points_2_50_clustered.txt  dist_matrix_points_2_50_normal.txt  experiment_log-blind-greedy.txt  experiment_log.txt  experiment_log_1.txt  mcgill_original_correct_results_450_all.txt  mcgill_original_correct_results_450_blind_greedy_only.txt  points_2_100_unif.txt  points_2_150_clustered.txt  points_2_150_exp.txt  points_2_200_normal.txt  points_2_200_unif.txt  points_2_250_exp.txt  points_2_250_normal.txt  points_2_300_clustered.txt  points_2_300_exp.txt  points_2_300_unif.txt  points_2_350_clustered.txt  points_2_350_unif.txt  points_2_400_clustered.txt  points_2_400_exp.txt  points_2_400_normal.txt  points_2_450_unif.txt  points_2_500_clustered.txt  points_2_600_clustered.txt  points_2_600_unif.txt  (+8 more)
data_files/input_files/: dist_matrix_points_10_100_clustered.txt  dist_matrix_points_10_100_exp.txt  dist_matrix_points_10_100_normal.txt  dist_matrix_points_10_100_unif.txt  dist_matrix_points_10_150_clustered.txt  dist_matrix_points_10_150_exp.txt  dist_matrix_points_10_150_normal.txt  dist_matrix_points_10_150_unif.txt  dist_matrix_points_10_200_clustered.txt  dist_matrix_points_10_200_exp.txt  (+262 more)
emd/: emd_assemble_matrix.py  emd_assemble_matrix_gtsrb.py  emd_example.py  emd_gtsrb_check_size.py  emd_prepare_caltech_files.py  emd_prepare_files.py  emd_prepare_gtsrb_files.py  emd_process_one_file.py  emd_process_one_file_gtsrb.py  emd_utils.py  example.py
ijcga_expensive_distances_sources/: all_methods_dim_2_eps_0.1_ratio.csv  ann_mcgill_results.csv  bib.bib  eps_dep.csv  ijcga-expensive-distances.tex  intro_example.fig  ws-ijcga.cls
paper/: .gitignore  abstract.tex  all_methods.csv  all_methods_dim_2_eps_0.1.txt  arxiv_version.tex  bib.bib  draft.aux  draft.tex  draft.vtc  draft_esa.tex  draft_ijcga.tex  draft_socg.tex  expensive-distances-main.tex  ijcga-expensive-distances.tex  mcgill_original_blind_greedy.csv  mcgill_perturbed_blind_greedy.csv  metric_space_exploration.aux  metric_space_exploration.tex  my_preamble.tex  my_preamble_exp_dist.tex  sosa_acm.tex  ws-ijcga.bst
paper_arxiv/: arxiv_version.bbl  arxiv_version.blg  arxiv_version.tex
python_version/: asymptotics.py  blind_greedy_spanner.py  blind_greedy_spanner_results.txt  blind_spanner.py  greedy_spanner.py  import_ann_to_db.sql  import_spanner_to_db.sql  import_to_db.sql  nearest_neighbor.py  nearest_neighbor1.py  nearest_neighbor_mcgill.py  nn_mcgill_results_all.csv  nn_more_results.txt  nn_results_euclidean.sql  quadtree_wspd.py  save_in_text_files.py  spanner_experiment_result.py  spanner_results_cpp_all.sql  table_printer.py  test_preparer.py  utils_euclidean.py  weakly_sorted.py
(+82 files in other folders)
